# vdex

./: .gitignore  Cargo.toml  README.md  upload_to_atlas.py
model_infos/: ViT-L-14_datacomp_xl_s13b_b90k.toml  ViT-L-16-SigLIP_webli.toml
src/: main.rs
src/commands/: search.rs  serve.rs  updatedb.rs
src/mmindex/: database.rs  embedding.rs  embexpr.pest  math.rs  query.rs
