[package]
name = "vdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
serde = "1.0.189"
serde_derive = "1.0.189"
toml = { version = "0.8.4", features = ["parse"] }
jwalk = "0.8.1"
sha2 = "0.10.8"
rayon = "1.8.0"
image = "0.24.7"
indicatif = { version = "0.17.7", features = ["rayon"] }
ron = "0.8.1"
bincode = "1.3.3"
blake3 = "1.5.0"
ort = { version = "1.16.2", features = ["cuda", "tensorrt", "load-dynamic"] }
ndarray = "0.15.6"
ndarray-ndimage = "0.4.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
clap = { version = "4.4.7", features = ["derive"] }
tokenizers = { version = "0.14.1", features = ["hf-hub", "http"] }
ordered-float = "4.1.1"
norman = "0.0.4"
