[package]
name = "vdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
serde = "1.0.188"
serde_derive = "1.0.188"
toml = { version = "0.8.0", features = ["parse"] }
jwalk = "0.8.1"
rayon = "1.7.0"
image = "0.24.7"
indicatif = { version = "0.17.6", features = ["rayon"] }
bincode = "1.3.3"
blake3 = "1.4.1"
ort = { version = "1.16.3", features = [
    "load-dynamic",
    "directml",
    "cuda",
    "tensorrt",
] }
ndarray = "0.15.6"
ndarray-ndimage = "0.4.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
clap = { version = "4.4.3", features = ["derive"] }
tokenizers = { version = "0.14.0", features = ["hf-hub", "http"] }
ordered-float = "3.9.1"
axum = { version = "0.7.2", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }
serde-hex = "0.1.0"
lru = "0.11.1"
log = "0.4.20"
crossbeam-queue = "0.3.8"
crossbeam-channel = "0.5.8"
serde_json = "1.0.107"
pest = "2.7.3"
pest_derive = "2.7.3"
tower-http = { version = "0.5.0", features = ["fs"] }
tower = "0.4.13"
tokio-util = { version = "0.7.10", features = ["io"] }
